# RPL

./: .gitignore  GRADES.txt  Guidelines.txt  README.txt  README_Assignment2.txt  Readme_Assignment3.txt  TODO.txt  camera_wireless_reconfig_parameters.yaml  run.sh  thymio_constants.py
localization/: CMakeLists.txt  README.txt  localization.doxyfile  package.xml
localization/config/: localization.rviz
localization/html/: annotated.html  bug.html  classCorrelationSensorUpdate-members.html  classCorrelationSensorUpdate.html  classFilterParser-members.html  classFilterParser.html  classLikelihoodSensorUpdate-members.html  classLikelihoodSensorUpdate.html  classLocalizationBehaviour-members.html  classLocalizationBehaviour.html  classMotionUpdate-members.html  classMotionUpdate.html  classMotionUpdateParser-members.html  classMotionUpdateParser.html  classOccupancyMap-members.html  classOccupancyMap.html  classOdometryMotionUpdate-members.html  classOdometryMotionUpdate.html  classParticle-members.html  classParticle.html  classParticleFilter-members.html  classParticleFilter.html  classPoseFilter-members.html  classPoseFilter.html  classRosParameterParser-members.html  classRosParameterParser.html  classRosTopicParser-members.html  classRosTopicParser.html  classRouletteWheelSampling-members.html  classRouletteWheelSampling.html  classSampling-members.html  classSampling.html  classSamplingParser-members.html  classSamplingParser.html  classSensorUpdate-members.html  classSensorUpdate.html  classSensorUpdateParser-members.html  classSensorUpdateParser.html  classStochasticUniversalSampling-members.html  classStochasticUniversalSampling.html  (+63 more)
localization/html/search/: all_1.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  search.js  (+6 more)
localization/include/io/: parser_sequencer.h  ros_topic_parser.h
localization/include/parameters/: localizer_parameters.h  motion_updater_parameters.h  parameters_bag.h  resampler_parameters.h  sensor_updater_parameters.h  topics_parameters.h
localization/include/probability_distributions/: probability_distributions.h
localization/include/sequencer/: localization_sequencer.h
localization/include/types/: pose.h
localization/include/visualizer/: visualizer.h
localization/latex/: annotated.tex  bug.tex  classCorrelationSensorUpdate.eps  classCorrelationSensorUpdate.tex  classFilterParser.tex  classLikelihoodSensorUpdate.eps  classLikelihoodSensorUpdate.tex  classLocalizationBehaviour.tex  classMotionUpdate.eps  classMotionUpdate.tex  classMotionUpdateParser.tex  classOccupancyMap.tex  classOdometryMotionUpdate.eps  classOdometryMotionUpdate.tex  classParticle.tex  classParticleFilter.eps  classParticleFilter.tex  classPoseFilter.eps  classPoseFilter.tex  classRosParameterParser.tex  classRosTopicParser.tex  classRouletteWheelSampling.eps  classRouletteWheelSampling.tex  classSampling.eps  classSampling.tex  classSamplingParser.tex  classSensorUpdate.eps  classSensorUpdate.tex  classSensorUpdateParser.tex  classStochasticUniversalSampling.eps  classStochasticUniversalSampling.tex  classVelocityMotionUpdate.eps  classVelocityMotionUpdate.tex  correlation__sensor__update_8h.tex  dir_0f7973510e66733d3c119fbbc51f0239.tex  dir_2803acce10437777de48fb286fd16cf2.tex  dir_2e5ee63b19183b7724b3c76e13438594.tex  dir_4c8f58d01f7ee50447e9c1e5f9c8f9b8.tex  dir_65181241861264700c9ee27096ad8d6c.tex  dir_66ada08be0d1f24131c32745f3f27500.tex  (+26 more)
localization/launch/: localization.launch  localization_test.launch  simulation.launch
localization/parameters/: filter_parameters.yaml  topics.yaml
localization/parameters/localizer_parameters/: algorithm_parameters.yaml  motion_updater_parameters.yaml  other_parameters.yaml  resampler_parameters.yaml  sensor_updater_parameters.yaml
localization/parameters/topics_parameters/: topics_parameters.yaml
localization/src/: localization.cpp  scan_remapper.cpp
localization/src/behaviour/: localization_behaviour.cpp
localization/src/filtering_strategies/: particle_filter.cpp  pose_filter.cpp
localization/src/io/: parser_sequencer.cpp  ros_topic_parser.cpp
localization/src/motion_update_strategies/: motion_update.cpp  (+2 more)
object_recognition/: CMakeLists.txt  package.xml
object_recognition/image_classes/: classes.txt  duck.pcd  spin_duck_close_0.pcd  spin_duck_close_135.pcd  spin_duck_close_180.pcd  spin_duck_close_225.pcd  spin_duck_close_270.pcd  spin_duck_close_315.pcd  spin_duck_close_45.pcd  spin_duck_close_90.pcd  spin_duck_far_0.pcd  spin_duck_far_135.pcd  spin_duck_far_180.pcd  spin_duck_far_225.pcd  spin_duck_far_270.pcd  spin_duck_far_315.pcd  spin_duck_far_45.pcd  spin_duck_far_90.pcd  spin_firefighter_close_0.pcd  spin_firefighter_close_135.pcd  spin_firefighter_close_180.pcd  spin_firefighter_close_225.pcd  spin_firefighter_close_270.pcd  spin_firefighter_close_315.pcd  spin_firefighter_close_45.pcd  spin_firefighter_close_90.pcd  spin_firefighter_far_0.pcd  spin_firefighter_far_135.pcd  spin_firefighter_far_180.pcd  spin_firefighter_far_225.pcd  spin_firefighter_far_270.pcd  spin_firefighter_far_315.pcd  spin_firefighter_far_45.pcd  spin_firefighter_far_90.pcd  spin_man_close_0.pcd  spin_man_close_135.pcd  spin_man_close_180.pcd  spin_man_close_225.pcd  spin_man_close_270.pcd  spin_man_close_315.pcd  (+27 more)
object_recognition/image_models/: duck.txt  duck_one.txt  person.txt  person_one.txt
object_recognition/launch/: spin_recognize.launch  spin_train.launch
object_recognition/parameters/: categories.yaml  object_recognition_parameters.yaml  parameters.txt  spin_image_parameters.txt  topics.yaml
object_recognition/src/: spin_recognition.cpp  spin_training.cpp
(+396 files in other folders)
